--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,3 +4,124 @@
 body {
   font-family: 'Outfit', sans-serif;
 }
+
+/* Video Protection Styles */
+video {
+  /* Disable right-click context menu */
+  pointer-events: auto !important;
+  
+  /* Prevent text selection */
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  
+  /* Prevent dragging */
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+  user-drag: none;
+  
+  /* Disable highlighting */
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
+/* Disable video download in older browsers */
+video::-webkit-media-controls {
+  overflow: hidden !important;
+}
+
+video::-webkit-media-controls-enclosure {
+  overflow: hidden;
+}
+
+/* Hide download button in some browsers */
+video::-webkit-media-controls-download-button {
+  display: none;
+}
+
+video::-webkit-media-controls-fullscreen-button {
+  display: none;
+}
+
+/* Firefox specific */
+video::-moz-media-controls {
+  visibility: hidden;
+}
+
+/* Prevent inspect element on video specifically */
+video.protected {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  pointer-events: auto;
+}
+
+/* Additional protection for video containers */
+.video-container {
+  position: relative;
+  overflow: hidden;
+}
+
+.video-container::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: transparent;
+  z-index: 1;
+  pointer-events: none;
+}
+
+/* Fullscreen video protection */
+video:fullscreen {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
+video:-webkit-full-screen {
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
+}
+
+video:-moz-full-screen {
+  -moz-user-select: none;
+}
+
+video:-ms-fullscreen {
+  -ms-user-select: none;
+}
+
+/* Hide download controls even in fullscreen */
+video:fullscreen::-webkit-media-controls-download-button {
+  display: none !important;
+}
+
+video:-webkit-full-screen::-webkit-media-controls-download-button {
+  display: none !important;
+}
+
+/* Prevent right-click in fullscreen */
+video:fullscreen::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: transparent;
+  z-index: 999;
+  pointer-events: none;
+}
